fix: chat z-index, size

--- a/src/components/Chat/style.scss
+++ b/src/components/Chat/style.scss
@@ -4,6 +4,11 @@
     display: flex;
     flex-direction: column;
     border-radius: 18px;
+    position: relative;
+
+    &_expanded {
+        z-index: 1;
+    }
 
     &-content {
         height: 100%;
