--- a/src/pages/HomePage/style.scss
+++ b/src/pages/HomePage/style.scss
@@ -9,6 +9,7 @@
 
     &-header {
         display: flex;
+        width: fit-content;
         height: 60px;
         position: relative;
         align-items: center;
@@ -23,7 +24,7 @@
         position: absolute;
         width: 400px;
         height: 100%;
+        max-height: 80vh;
         right: 0px;
-        z-index: 1;
     }
 }
